fix(deploy): no heap dump on OOM, JFR as the standing diagnostic
The systemd env files switched HeapDumpOnOutOfMemoryError on for every
service. A heap dump is a copy of the heap, and the heap of a running
service holds the Vault token, database and Pulsar credentials, callers'
JWTs and tenant data, so a file like that should never be written
automatically. Turn it off explicitly, and set LimitCORE=0 in the unit
for the same reason (systemd-coredump honours the limit).

In its place every service now runs a continuous JFR recording (default
profile, leak candidates with allocation stack traces, bounded to 24 h
or 1 GB in a repository under /var/lib/datahub/<name>/jfr so it survives
an OOM exit), native memory tracking, and a crash log under
/var/log/datahub/<name>; the GC log was already there. The recording
drops jdk.InitialEnvironmentVariable, jdk.InitialSystemProperty and
jdk.SystemProcess, which would otherwise record the AppRole secret-id
from common.env, any -D credential, and other processes' command lines.

The README gets a Diagnostics section: what the recording gives, how to
dump it live with reference chains, how to assemble the repository after
an abnormal exit, and how to take a heap dump deliberately when nothing
else finds the leak, including how to handle the file afterwards.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Signed-off-by: Olav Gjerde <olav@intellistream.ai>